Restructured and redesigned - Put content into folders - Moved several "Helper" functions into their own extension classes - Created custom buttons with their own style - Created base custom control class from which custom controls may inherit - Fixed "New Card" control even more this time - "Add Commander" control now disappears and shows a card count in it's place if there are too many cards in your deck to add a commander (Not that this does NOT check other legalities such as having multiples of cards that aren't allowed to have multiple in commander format) - Changed how "constant" values are formatted - Created dynamic resource style values - Moved colors over to dynamic resource instead of constants - Changed button borders to use color gradient - Made font universal

--- a/Windows/MainWindow.xaml
+++ b/Windows/MainWindow.xaml
@@ -8,6 +8,6 @@
         Title="MTG Proxy Desk" Height="450" Width="800"
 >
     <Grid>
-        <Frame Name="MainFrame" Source="StartPage.xaml" NavigationUIVisibility="Hidden"></Frame>
+        <Frame Name="MainFrame" Source="../Pages/StartPage.xaml" NavigationUIVisibility="Hidden"></Frame>
     </Grid>
 </Window>
