--- a/App.xaml
+++ b/App.xaml
@@ -1,9 +1,248 @@
-﻿<Application x:Class="MTGProxyDesk.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:MTGProxyDesk"
-             StartupUri="MainWindow.xaml">
+﻿<Application
+    x:Class="MTGProxyDesk.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:MTGProxyDesk"
+    StartupUri="Windows/MainWindow.xaml"
+>
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <FontFamily x:Key="AppFont">Bahnschrift Condensed</FontFamily>
+            
+            <Color x:Key="BG1_Color">#000000</Color>
+            <Color x:Key="BG2_Color">#333333</Color>
+            <Color x:Key="BG3_Color">#141414</Color>
+            <Color x:Key="FG1_Color">#ffffff</Color>
+            <Color x:Key="FG2_Color">#b4b4b4</Color>
+            <Color x:Key="FG3_Color">#c7c7c7</Color>
+
+            <Color x:Key="White_Color">#ffffff</Color>
+            <Color x:Key="Blue_Color">#0000ff</Color>
+            <Color x:Key="Black_Color">#000000</Color>
+            <Color x:Key="Red_Color">#ff0000</Color>
+            <Color x:Key="Green_Color">#00ff00</Color>
+
+            <Color x:Key="White_MTG_Color">#fefcd6</Color>
+            <Color x:Key="Blue_MTG_Color">#a9e1f8</Color>
+            <Color x:Key="Black_MTG_Color">#ccc2c1</Color>
+            <Color x:Key="Red_MTG_Color">#faa890</Color>
+            <Color x:Key="Green_MTG_Color">#9bd1ab</Color>
+
+            <SolidColorBrush x:Key="BG1" Color="{DynamicResource BG1_Color}" />
+            <SolidColorBrush x:Key="BG2" Color="{DynamicResource BG2_Color}" />
+            <SolidColorBrush x:Key="FG1" Color="{DynamicResource FG1_Color}" />
+            <SolidColorBrush x:Key="FG2" Color="{DynamicResource FG2_Color}" />
+
+            <SolidColorBrush x:Key="White" Color="{DynamicResource White_Color}" />
+            <SolidColorBrush x:Key="Blue" Color="{DynamicResource Blue_Color}" />
+            <SolidColorBrush x:Key="Black" Color="{DynamicResource Black_Color}" />
+            <SolidColorBrush x:Key="Red" Color="{DynamicResource Red_Color}" />
+            <SolidColorBrush x:Key="Green" Color="{DynamicResource Green_Color}" />
+
+            <SolidColorBrush x:Key="WhiteMTG" Color="{DynamicResource White_MTG_Color}" />
+            <SolidColorBrush x:Key="BlueMTG" Color="{DynamicResource Blue_MTG_Color}" />
+            <SolidColorBrush x:Key="BlackMTG" Color="{DynamicResource Black_MTG_Color}" />
+            <SolidColorBrush x:Key="RedMTG" Color="{DynamicResource Red_MTG_Color}" />
+            <SolidColorBrush x:Key="GreenMTG" Color="{DynamicResource Green_MTG_Color}" />
+
+            <LinearGradientBrush x:Key="WUBRG_Vert" StartPoint="0,0" EndPoint="0,1">
+                <GradientStop Color="{DynamicResource White_Color}" Offset="0.0"  />
+                <GradientStop Color="{DynamicResource Blue_Color}" Offset="0.25"  />
+                <GradientStop Color="{DynamicResource Black_Color}" Offset="0.5"  />
+                <GradientStop Color="{DynamicResource Red_Color}" Offset="0.75"  />
+                <GradientStop Color="{DynamicResource Green_Color}" Offset="1.0"  />
+            </LinearGradientBrush>
+
+            <LinearGradientBrush x:Key="WUBRG_MTG_Vert" StartPoint="0,0" EndPoint="0,1">
+                <GradientStop Color="{DynamicResource White_MTG_Color}" Offset="0.0"  />
+                <GradientStop Color="{DynamicResource Blue_MTG_Color}" Offset="0.25"  />
+                <GradientStop Color="{DynamicResource Black_MTG_Color}" Offset="0.5"  />
+                <GradientStop Color="{DynamicResource Red_MTG_Color}" Offset="0.75"  />
+                <GradientStop Color="{DynamicResource Green_MTG_Color}" Offset="1.0"  />
+            </LinearGradientBrush>
+    
+            <LinearGradientBrush x:Key="DarkerGradient_Vert" StartPoint="0,0" EndPoint="0,1">
+                <GradientStop Color="{DynamicResource BG1_Color}" Offset="0.0"/>
+                <GradientStop Color="{DynamicResource BG3_Color}" Offset="1.0"/>
+            </LinearGradientBrush>
+
+            <LinearGradientBrush x:Key="DarkGradient_Vert" StartPoint="0,0" EndPoint="0,1">
+                <GradientStop Color="{DynamicResource BG1_Color}" Offset="0.0"/>
+                <GradientStop Color="{DynamicResource BG2_Color}" Offset="1.0"/>
+            </LinearGradientBrush>
+
+            <LinearGradientBrush x:Key="LightGradient_Vert" StartPoint="0,0" EndPoint="0,1">
+                <GradientStop Color="{DynamicResource FG2_Color}" Offset="0.0"/>
+                <GradientStop Color="{DynamicResource FG1_Color}" Offset="1.0"/>
+            </LinearGradientBrush>
+
+            <LinearGradientBrush x:Key="WUBRG_Horiz" StartPoint="0,0" EndPoint="1,0">
+                <GradientStop Color="{DynamicResource White_Color}" Offset="0.0"  />
+                <GradientStop Color="{DynamicResource Blue_Color}" Offset="0.25"  />
+                <GradientStop Color="{DynamicResource Black_Color}" Offset="0.5"  />
+                <GradientStop Color="{DynamicResource Red_Color}" Offset="0.75"  />
+                <GradientStop Color="{DynamicResource Green_Color}" Offset="1.0"  />
+            </LinearGradientBrush>
+
+            <LinearGradientBrush x:Key="WUBRG_MTG_Horiz" StartPoint="0,0" EndPoint="1,0">
+                <GradientStop Color="{DynamicResource White_MTG_Color}" Offset="0.0"  />
+                <GradientStop Color="{DynamicResource Blue_MTG_Color}" Offset="0.25"  />
+                <GradientStop Color="{DynamicResource Black_MTG_Color}" Offset="0.5"  />
+                <GradientStop Color="{DynamicResource Red_MTG_Color}" Offset="0.75"  />
+                <GradientStop Color="{DynamicResource Green_MTG_Color}" Offset="1.0"  />
+            </LinearGradientBrush>
+
+            <LinearGradientBrush x:Key="DarkerGradient_Horiz" StartPoint="0,0" EndPoint="1,0">
+                <GradientStop Color="{DynamicResource BG1_Color}" Offset="0.0"/>
+                <GradientStop Color="{DynamicResource BG3_Color}" Offset="1.0"/>
+            </LinearGradientBrush>
+
+            <LinearGradientBrush x:Key="DarkGradient_Horiz" StartPoint="0,0" EndPoint="1,0">
+                <GradientStop Color="{DynamicResource BG1_Color}" Offset="0.0"/>
+                <GradientStop Color="{DynamicResource BG2_Color}" Offset="1.0"/>
+            </LinearGradientBrush>
+
+            <LinearGradientBrush x:Key="LightGradient_Horiz" StartPoint="0,0" EndPoint="1,0">
+                <GradientStop Color="{DynamicResource FG2_Color}" Offset="0.0"/>
+                <GradientStop Color="{DynamicResource FG1_Color}" Offset="1.0"/>
+            </LinearGradientBrush>
+
+            <LinearGradientBrush x:Key="WUBRG_Diag" StartPoint="0,0" EndPoint="1,1">
+                <GradientStop Color="{DynamicResource White_Color}" Offset="0.0"  />
+                <GradientStop Color="{DynamicResource Blue_Color}" Offset="0.25"  />
+                <GradientStop Color="{DynamicResource Black_Color}" Offset="0.5"  />
+                <GradientStop Color="{DynamicResource Red_Color}" Offset="0.75"  />
+                <GradientStop Color="{DynamicResource Green_Color}" Offset="1.0"  />
+            </LinearGradientBrush>
+
+            <LinearGradientBrush x:Key="WUBRG_MTG_Diag" StartPoint="0,0" EndPoint="1,1">
+                <GradientStop Color="{DynamicResource White_MTG_Color}" Offset="0.0"  />
+                <GradientStop Color="{DynamicResource Blue_MTG_Color}" Offset="0.25"  />
+                <GradientStop Color="{DynamicResource Black_MTG_Color}" Offset="0.5"  />
+                <GradientStop Color="{DynamicResource Red_MTG_Color}" Offset="0.75"  />
+                <GradientStop Color="{DynamicResource Green_MTG_Color}" Offset="1.0"  />
+            </LinearGradientBrush>
+
+            <LinearGradientBrush x:Key="DarkerGradient_Diag" StartPoint="0,0" EndPoint="1,1">
+                <GradientStop Color="{DynamicResource BG1_Color}" Offset="0.0"/>
+                <GradientStop Color="{DynamicResource BG3_Color}" Offset="1.0"/>
+            </LinearGradientBrush>
+
+            <LinearGradientBrush x:Key="DarkGradient_Diag" StartPoint="0,0" EndPoint="1,1">
+                <GradientStop Color="{DynamicResource BG1_Color}" Offset="0.0"/>
+                <GradientStop Color="{DynamicResource BG2_Color}" Offset="1.0"/>
+            </LinearGradientBrush>
+
+            <LinearGradientBrush x:Key="LightGradient_Diag" StartPoint="0,0" EndPoint="1,1">
+                <GradientStop Color="{DynamicResource FG2_Color}" Offset="0.0"/>
+                <GradientStop Color="{DynamicResource FG1_Color}" Offset="1.0"/>
+            </LinearGradientBrush>
+
+            <Style x:Key="HiddenRepeatButton" TargetType="{x:Type RepeatButton}">
+                <Setter Property="Visibility" Value="Hidden"/>
+            </Style>
+
+            <Style x:Key="ScrollBarThumb" TargetType="{x:Type Thumb}">
+                <Setter Property="SnapsToDevicePixels" Value="True"/>
+                <Setter Property="OverridesDefaultStyle" Value="true"/>
+                <Setter Property="IsTabStop" Value="false"/>
+                <Setter Property="Focusable" Value="false"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type Thumb}">
+                            <Border 
+                                CornerRadius="4" 
+                                Background="{TemplateBinding Background}" 
+                                BorderBrush="{TemplateBinding BorderBrush}" 
+                                BorderThickness="1"  
+                                Width="8" 
+                                Margin="8,0,-2,0"
+                            />
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+            <ControlTemplate x:Key="VerticalScrollBar" TargetType="{x:Type ScrollBar}">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition MaxHeight="0"/>
+                        <RowDefinition Height="0.00001*"/>
+                        <RowDefinition MaxHeight="0"/>
+                    </Grid.RowDefinitions>
+                    <Border Grid.RowSpan="3" CornerRadius="2" Background="Transparent" />
+                    <RepeatButton 
+                        Grid.Row="0" 
+                        Style="{DynamicResource HiddenRepeatButton}" 
+                        Height="18" 
+                        Command="ScrollBar.LineUpCommand" 
+                        Content="M 0 4 L 8 4 L 4 0 Z" 
+                    />
+                    <Track Name="PART_Track" Grid.Row="1" IsDirectionReversed="true">
+                        <Track.DecreaseRepeatButton>
+                            <RepeatButton Style="{DynamicResource HiddenRepeatButton}" Command="ScrollBar.PageUpCommand" />
+                        </Track.DecreaseRepeatButton>
+                        <Track.Thumb>
+                            <Thumb 
+                                Style="{DynamicResource ScrollBarThumb}"
+                                Margin="1,0,1,0" 
+                                Background="{DynamicResource WUBRG_MTG_Vert}" 
+                                BorderBrush="{DynamicResource WUBRG_Vert}" 
+                            />
+                        </Track.Thumb>
+                        <Track.IncreaseRepeatButton>
+                            <RepeatButton Style="{DynamicResource HiddenRepeatButton}" Command="ScrollBar.PageDownCommand" />
+                        </Track.IncreaseRepeatButton>
+                    </Track>
+                    <RepeatButton 
+                        Grid.Row="3" 
+                        Style="{DynamicResource HiddenRepeatButton}" 
+                        Height="18" 
+                        Command="ScrollBar.LineDownCommand" 
+                        Content="M 0 0 L 4 4 L 8 0 Z"
+                    />
+                </Grid>
+            </ControlTemplate>
+            <ControlTemplate x:Key="HorizontalScrollBar" TargetType="{x:Type ScrollBar}">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition MaxWidth="18"/>
+                        <ColumnDefinition Width="0.00001*"/>
+                        <ColumnDefinition MaxWidth="18"/>
+                    </Grid.ColumnDefinitions>
+                    <Border Grid.ColumnSpan="3" CornerRadius="2" Background="Transparent"/>
+                    <RepeatButton 
+                        Grid.Column="0"  
+                        Style="{DynamicResource HiddenRepeatButton}" 
+                        Width="18" 
+                        Command="ScrollBar.LineLeftCommand" 
+                        Content="M 4 0 L 4 8 L 0 4 Z" 
+                    />
+                    <Track Name="PART_Track" Grid.Column="1" IsDirectionReversed="False">
+                        <Track.DecreaseRepeatButton>
+                            <RepeatButton Style="{DynamicResource HiddenRepeatButton}" Command="ScrollBar.PageLeftCommand" />
+                        </Track.DecreaseRepeatButton>
+                        <Track.Thumb>
+                            <Thumb 
+                                Style="{DynamicResource ScrollBarThumb}" 
+                                Margin="0,1,0,1" 
+                                Background="{DynamicResource WUBRG_MTG_Horiz}" 
+                                BorderBrush="{DynamicResource WUBRG_Horiz}" 
+                            />
+                        </Track.Thumb>
+                        <Track.IncreaseRepeatButton>
+                            <RepeatButton Style="{DynamicResource HiddenRepeatButton}" Command="ScrollBar.PageRightCommand" />
+                        </Track.IncreaseRepeatButton>
+                    </Track>
+                    <RepeatButton 
+                        Grid.Column="3" 
+                        Style="{DynamicResource HiddenRepeatButton}" 
+                        Width="18" 
+                        Command="ScrollBar.LineRightCommand" 
+                        Content="M 0 0 L 4 4 L 0 8 Z"
+                    />
+                </Grid>
+            </ControlTemplate>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
