--- a/Controls/CardControl.xaml
+++ b/Controls/CardControl.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="MTGProxyDesk.CardControl"
+﻿<local:MPDControl x:Class="MTGProxyDesk.Controls.CardControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MTGProxyDesk"
+             xmlns:local="clr-namespace:MTGProxyDesk.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="350" d:DesignWidth="250"
 >
@@ -13,11 +13,11 @@
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
                         <Border Name="border" 
-                        BorderThickness="1"
-                        BorderBrush="Transparent" 
-                        CornerRadius="3"
-                        Padding="0"
-                    >
+                            BorderThickness="1"
+                            BorderBrush="Transparent" 
+                            CornerRadius="10"
+                            Padding="0"
+                        >
                             <ContentPresenter Margin="0" HorizontalAlignment="Center" VerticalAlignment="Center" />
                         </Border>
                         <ControlTemplate.Triggers>
@@ -31,7 +31,7 @@
         </Style>
     </UserControl.Resources>
 
-    <Grid>
+    <Grid Visibility="{Binding CtrlVisibility, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="5*"/>
         </Grid.ColumnDefinitions>
@@ -59,8 +59,8 @@
                         />
                     </Grid>
                 </Button>
-                <StackPanel Visibility="Hidden" MouseEnter="ShowMenu" Name="ChildContainer" VerticalAlignment="Center"/>
+                <StackPanel Visibility="Hidden" MouseEnter="ShowMenu" Name="Menu" VerticalAlignment="Center"/>
             </Grid>
         </Viewbox>
     </Grid>
-</UserControl>
+</local:MPDControl>
