--- a/Pages/StartPage.xaml
+++ b/Pages/StartPage.xaml
@@ -4,6 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:MTGProxyDesk"
+      xmlns:ctrls="clr-namespace:MTGProxyDesk.Controls"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="StartPage"
@@ -31,7 +32,7 @@
 
         <Viewbox Grid.Column="1" Grid.Row="1">
             <Border BorderBrush="Black" BorderThickness="1" CornerRadius="5">
-                <Grid Background="{Binding Path=BG1}">
+                <Grid Background="{DynamicResource BG1}">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="2*" />
                         <ColumnDefinition Width="4*" />
@@ -51,41 +52,35 @@
                         Content="MTG Proxy Desk" 
                         Grid.Row="0" 
                         Grid.ColumnSpan="4" 
-                        HorizontalAlignment="Center" 
+                        HorizontalAlignment="Center"
                         Margin="40,0,40,0" 
                         VerticalAlignment="Center" 
-                        FontFamily="Bahnschrift Condensed" 
+                        FontFamily="{DynamicResource AppFont}" 
                         FontSize="24"
-                        Foreground="{Binding Path=FG1}"
+                        Foreground="{DynamicResource FG1}"
                     />
-                    <TextBox 
+                    <Label 
                         Name="DeckName" 
                         Grid.Row="2" 
                         Grid.Column="1" 
-                        MinWidth="100" 
-                        IsEnabled="False" 
-                        Text="{Binding Path=FileName, UpdateSourceTrigger=PropertyChanged}"
-                        BorderBrush="Black"
-                        BorderThickness="1,1,0,0"
+                        MinWidth="100"
+                        Content="{Binding Path=FileName, UpdateSourceTrigger=PropertyChanged}"
+                        BorderThickness="0"
                         Background="White"
+                        FontFamily="{DynamicResource AppFont}" 
+                        VerticalContentAlignment="Center"
+                        HorizontalContentAlignment="Right"
                     />
-                    <Button 
-                        Grid.Row="2" 
-                        Grid.Column="2" 
-                        HorizontalAlignment="Stretch" 
-                        Content="Browse" 
+
+                    <ctrls:MPDButton
+                        Grid.Row="2"
+                        Grid.Column="2"
+                        HorizontalContentAlignment="Stretch"
+                        HorizontalAlignment="Stretch"
+                        TextContent="Browse"
                         Click="BrowseDeck"
-                        BorderBrush="Black"
-                        BorderThickness="1,1,1,0"
-                        Background="{Binding Path=BG2}"
-                        Foreground="{Binding Path=FG2}"
-                    >
-                        <Button.Resources>
-                            <Style TargetType="Border">
-                                <Setter Property="CornerRadius" Value="0,2,0,0"/>
-                            </Style>
-                        </Button.Resources>
-                    </Button>
+                        CornerRadius="1,1,1,0"
+                    />
 
                     <Grid
                         Grid.Row="3"
@@ -102,20 +97,12 @@
                             <RowDefinition Height="1*" />
                         </Grid.RowDefinitions>
 
-                        <Button
-                            Content="New Deck" 
-                            Click="NewDeck" 
+                        <ctrls:MPDButton
                             HorizontalAlignment="Stretch"
-                            BorderBrush="Black"
-                            Background="{Binding Path=BG2}"
-                            Foreground="{Binding Path=FG2}"
-                        >
-                            <Button.Resources>
-                                <Style TargetType="Border">
-                                    <Setter Property="CornerRadius" Value="0,0,2,2"/>
-                                </Style>
-                            </Button.Resources>
-                        </Button>
+                            CornerRadius="0,0,2,2"
+                            TextContent="New Deck"
+                            Click="NewDeck"
+                        />
                     </Grid>
 
                     <Grid
@@ -137,47 +124,28 @@
                             <RowDefinition Height="1*" />
                         </Grid.RowDefinitions>
 
-                        <Button
-                            Grid.Column="0" 
-                            Content="New Deck" 
-                            Click="NewDeck" 
+                        <ctrls:MPDButton
+                            Grid.Column="0"
+                            CornerRadius="0,0,0,2"
                             HorizontalAlignment="Stretch"
-                            BorderBrush="Black"
-                            BorderThickness="1,1,0,1"
-                            Background="{Binding Path=BG2}"
-                            Foreground="{Binding Path=FG2}"
-                        >
-                            <Button.Resources>
-                                <Style TargetType="Border">
-                                    <Setter Property="CornerRadius" Value="0,0,0,2"/>
-                                </Style>
-                            </Button.Resources>
-                        </Button>
-                        <Button
-                            Grid.Column="1" 
-                            Content="Edit Deck" 
-                            Click="EditDeck" 
-                            HorizontalAlignment="Stretch"
-                            BorderBrush="Black"
-                            Background="{Binding Path=BG2}"
-                            Foreground="{Binding Path=FG2}"
+                            TextContent="New Deck"
+                            Click="NewDeck"
                         />
-                        <Button
-                            Grid.Column="2" 
-                            Content="Play" 
-                            Click="BeginPlay" 
+                        <ctrls:MPDButton
+                            Grid.Column="1"
+                            CornerRadius="0"
                             HorizontalAlignment="Stretch"
-                            BorderBrush="Black"
-                            BorderThickness="0,1,1,1"
-                            Background="{Binding Path=BG2}"
-                            Foreground="{Binding Path=FG2}"
-                        >
-                            <Button.Resources>
-                                <Style TargetType="Border">
-                                    <Setter Property="CornerRadius" Value="0,0,2,0"/>
-                                </Style>
-                            </Button.Resources>
-                        </Button>
+                            TextContent="Edit Deck"
+                            Click="EditDeck"
+                        />
+                        <ctrls:MPDButton
+                            Grid.Column="2"
+                            CornerRadius="0,0,2,0"
+                            HorizontalAlignment="Stretch"
+                            TextContent="Play"
+                            Click="BeginPlay"
+                            IsEnabled="False"
+                        />
                     </Grid>
 
                     <ProgressBar
@@ -194,8 +162,8 @@
                         Value="100"
                         RenderTransformOrigin="0.5, 0.5"
                         BorderThickness="0"
-                        Foreground="{Binding Path=BG2}"
-                        Background="{Binding Path=LoaderGradient}"
+                        Foreground="{DynamicResource BG2}"
+                        Background="{DynamicResource WUBRG_MTG_Horiz}"
                     >
                         <ProgressBar.RenderTransform>
                             <RotateTransform Angle="180"/>
@@ -218,8 +186,8 @@
             VerticalAlignment="Bottom" 
             Margin="10,5" 
             FontSize="18" 
-            FontFamily="Bahnschrift Condensed"
-            Foreground="{Binding Path=FG1}"
+            FontFamily="{DynamicResource AppFont}" 
+            Foreground="{DynamicResource FG1}"
         >
             <Label.Effect>
                 <DropShadowEffect ShadowDepth="1" BlurRadius="5" Color="#000000" />
@@ -227,4 +195,3 @@
         </Label>
     </Grid>
 </Page>
-
