--- a/Pages/NewDeckPage.xaml
+++ b/Pages/NewDeckPage.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:MTGProxyDesk"
       xmlns:ctrls="clr-namespace:MTGProxyDesk.Controls"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="1080" d:DesignWidth="1920"
       Title="NewDeckPage"
 >
     <Page.Resources>
@@ -28,67 +28,106 @@
         </Style>
     </Page.Resources>
 
-    <Border Background="{DynamicResource DarkerGradient_Diag}">
-        <Viewbox Stretch="Uniform" VerticalAlignment="Top">
-            <Grid Width="2500" Height="1400" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+    <Border
+        VerticalAlignment="Stretch" 
+        HorizontalAlignment="Stretch" 
+        Background="{DynamicResource DarkerGradient_Diag}"
+    >
+        <DockPanel 
+            VerticalAlignment="Stretch" 
+            HorizontalAlignment="Stretch" 
+            LastChildFill="True"
+        >
+            <Grid
+                VerticalAlignment="Top" 
+                HorizontalAlignment="Stretch" 
+                DockPanel.Dock="Top"
+            >
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="6*"/>
                     <ColumnDefinition Width="2*"/>
                     <ColumnDefinition Width="6*"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="2*"/>
-                    <RowDefinition Height="4*"/>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="3*"/>
+                    <RowDefinition Height="1*"/>
                 </Grid.RowDefinitions>
 
-                <Label 
+                <Label
                     Foreground="{DynamicResource FG2}" 
                     Name="CommanderLabel" 
                     Content="Commander" 
                     HorizontalAlignment="Right" 
-                    FontSize="40" 
-                    Margin="0,0,30,0" 
-                    VerticalAlignment="Top"
+                    VerticalAlignment="Center"
+                    FontSize="30"
+                    Margin="0,0,5,0"
                     FontFamily="{DynamicResource AppFont}" 
                 />
-                <Label 
+                <Label
+                    Grid.Row="2"
                     Foreground="{DynamicResource FG2}" 
                     Content="Deck" 
                     HorizontalAlignment="Left" 
-                    FontSize="40" 
-                    Margin="30,0,0,0" 
-                    VerticalAlignment="Bottom"
+                    FontSize="30"
+                    Margin="5,0,0,0"
+                    VerticalAlignment="Center"
                     FontFamily="{DynamicResource AppFont}" 
                 />
+                <Viewbox Grid.Column="1" Grid.Row="1" Visibility="{Binding CountVisibility}">
+                    <DockPanel>
+                        <Label
+                            Foreground="{DynamicResource FG1}" 
+                            FontSize="28" 
+                            HorizontalAlignment="Right" 
+                            VerticalAlignment="Center"
+                            Content="Card Count:"
+                            Margin="0,0,5,0"
+                            FontFamily="{DynamicResource AppFont}"
+                            DockPanel.Dock="Left"
+                        />
+                        <Label
+                            Name="CardCount"
+                            Foreground="{DynamicResource FG1}"
+                            FontSize="28" 
+                            HorizontalAlignment="Left" 
+                            VerticalAlignment="Center"
+                            Margin="5,0,0,0" 
+                            Content="0"
+                            FontFamily="{DynamicResource AppFont}"
+                            DockPanel.Dock="Right"
+                        />
+                    </DockPanel>
+                </Viewbox>
 
-                <Grid Grid.Column="1" Visibility="{Binding CountVisibility}">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="2*"/>
-                        <ColumnDefinition Width="1*"/>
-                    </Grid.ColumnDefinitions>
-                    <Label 
-                        Foreground="{DynamicResource FG1}" 
-                        FontSize="42" 
-                        HorizontalAlignment="Right" 
-                        VerticalAlignment="Center"
-                        Margin="0,0,5,0" 
-                        Content="Card Count:"
-                        FontFamily="{DynamicResource AppFont}" 
-                    />
-                    <Label
-                        Name="CardCount"
-                        Foreground="{DynamicResource FG1}" 
-                        Grid.Column="1" 
-                        FontSize="42" 
-                        HorizontalAlignment="Left" 
-                        VerticalAlignment="Center"
-                        Margin="5,0,0,0" 
-                        Content="0"
-                        FontFamily="{DynamicResource AppFont}" 
-                    />
-                </Grid>
-                
-                <ctrls:CardControl Grid.Column="1" Margin="5" x:Name="Commander">
+                <ctrls:MPDButton
+                    Grid.Column="2"
+                    Tag="Back"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Top"
+                    TextContent="  Back  "
+                    Click="GoBack"
+                    FontSize="30"
+                    Margin="0,10,105,0"
+                />
+
+                <ctrls:MPDButton
+                    Grid.Column="2"
+                    Tag="Save"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Top"
+                    TextContent="  Save  "
+                    Click="SaveDeck"
+                    FontSize="30"
+                    Margin="0,10,10,0"
+                />
+
+                <ctrls:CardControl 
+                    Grid.Column="1"
+                    Grid.RowSpan="3" 
+                    Margin="5" 
+                    x:Name="Commander"
+                >
                     <ctrls:MPDButton
                         TextContent="Add"
                         Tag="Add"
@@ -103,94 +142,58 @@
                         Margin="30,10,30,0"
                     />
                 </ctrls:CardControl>
-
-                <Grid Grid.Column="2" Grid.Row="0">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="4*"/>
-                        <ColumnDefinition Width="1*"/>
-                        <ColumnDefinition Width="1*"/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="1*"/>
-                        <RowDefinition Height="6*"/>
-                    </Grid.RowDefinitions>
-
-                    <ctrls:MPDButton
-                        Grid.Column="1"
-                        Tag="Back"
-                        HorizontalAlignment="Stretch"
-                        VerticalAlignment="Stretch"
-                        TextContent="Back"
-                        Click="GoBack"
-                        FontSize="30"
-                        Margin="5,10,2,0"
-                    />
-                    
-                    <ctrls:MPDButton
-                        Grid.Column="2"
-                        Tag="Save"
-                        HorizontalAlignment="Stretch"
-                        VerticalAlignment="Stretch"
-                        TextContent="Save"
-                        Click="SaveDeck"
-                        FontSize="30"
-                        Margin="2,10,5,0"
-                    />
-                </Grid>
-
-                <ScrollViewer 
-                    Grid.Column="0" 
-                    Grid.Row="1"
-                    Grid.ColumnSpan="3"
-                    Margin="0" 
-                    Padding="0" 
-                    VerticalScrollBarVisibility="Auto" 
-                    HorizontalScrollBarVisibility="Disabled"
-                >
-                    <StackPanel Name="DeckContainer" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="5*"/>
-                                <ColumnDefinition Width="5*"/>
-                                <ColumnDefinition Width="5*"/>
-                                <ColumnDefinition Width="5*"/>
-                                <ColumnDefinition Width="5*"/>
-                                <ColumnDefinition Width="5*"/>
-                                <ColumnDefinition Width="5*"/>
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="7*"/>
-                            </Grid.RowDefinitions>
-
-                            <ctrls:CardControl Margin="5" x:Name="cardCtrl">
-                                <ctrls:MPDButton
-                                    TextContent="Add"
-                                    Tag="Add"
-                                    Click="AddCard"
-                                    Margin="30,10,30,0"
-                                />
-                                
-                                <ctrls:NumberPicker
-                                    Visibility="Collapsed" 
-                                    HorizontalAlignment="Center" 
-                                    VerticalAlignment="Center" 
-                                    Min="1" 
-                                    Max="4" 
-                                    OnChange="UpdateCardCount"
-                                />
-
-                                <ctrls:MPDButton
-                                    TextContent="Remove"
-                                    Tag="Remove"
-                                    Click="RemoveCard"
-                                    CtrlVisibility="Collapsed"
-                                    Margin="30,10,30,0"
-                                />
-                            </ctrls:CardControl>
-                        </Grid>
-                    </StackPanel>
-                </ScrollViewer>
             </Grid>
-        </Viewbox>
+            <ScrollViewer
+                MinHeight="720"
+                Margin="0" 
+                Padding="0" 
+                VerticalScrollBarVisibility="Auto" 
+                HorizontalScrollBarVisibility="Disabled"
+                DockPanel.Dock="Bottom"
+            >
+                <StackPanel Name="DeckContainer" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="5*"/>
+                            <ColumnDefinition Width="5*"/>
+                            <ColumnDefinition Width="5*"/>
+                            <ColumnDefinition Width="5*"/>
+                            <ColumnDefinition Width="5*"/>
+                            <ColumnDefinition Width="5*"/>
+                            <ColumnDefinition Width="5*"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="7*"/>
+                        </Grid.RowDefinitions>
+
+                        <ctrls:CardControl Margin="5" x:Name="cardCtrl">
+                            <ctrls:MPDButton
+                    TextContent="Add"
+                    Tag="Add"
+                    Click="AddCard"
+                    Margin="30,10,30,0"
+                />
+
+                            <ctrls:NumberPicker
+                    Visibility="Collapsed" 
+                    HorizontalAlignment="Center" 
+                    VerticalAlignment="Center" 
+                    Min="1" 
+                    Max="4" 
+                    OnChange="UpdateCardCount"
+                />
+
+                            <ctrls:MPDButton
+                    TextContent="Remove"
+                    Tag="Remove"
+                    Click="RemoveCard"
+                    CtrlVisibility="Collapsed"
+                    Margin="30,10,30,0"
+                />
+                        </ctrls:CardControl>
+                    </Grid>
+                </StackPanel>
+            </ScrollViewer>
+        </DockPanel>
     </Border>
 </Page>
